mobiel visual fixes: techicon overlap + white half zoom

--- a/master/src/assets/styles/Expertise.scss
+++ b/master/src/assets/styles/Expertise.scss
@@ -93,7 +93,7 @@ $color-blue-dark: #1e2d3d;
   margin-bottom: 4rem;
   margin-top: -14rem;
   padding-top: 4rem;
-  padding-bottom: -2rem;
+  padding-bottom: 2rem;
 
   @media (max-width: 1301px) {
     margin-bottom: 2rem;
@@ -102,6 +102,16 @@ $color-blue-dark: #1e2d3d;
 
   @media (max-width: 1000px) {
     margin-bottom: 1.5rem;
+  }
+
+  @media (max-width: 768px) {
+    margin-bottom: 6rem;
+    padding-bottom: 3rem;
+  }
+
+  @media (max-width: 480px) {
+    margin-bottom: 8rem;
+    padding-bottom: 4rem;
   }
 
   &__blurb {
@@ -131,18 +141,26 @@ $color-blue-dark: #1e2d3d;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 300vw;
-  max-width: 300vw;
+  width: 100%;
+  max-width: 100vw;
   position: relative;
-  left: 50%;
-  right: 0;
-  transform: translateX(-10%);
   margin-top: -14rem;
-  padding-bottom: 5rem ;
+  padding-bottom: 5rem;
   box-sizing: border-box;
+  overflow: hidden;
+
+  @media (max-width: 768px) {
+    margin-top: -8rem;
+    padding-bottom: 3rem;
+  }
+
+  @media (max-width: 480px) {
+    margin-top: -4rem;
+    padding-bottom: 2rem;
+  }
 
   &__belt-container {
-    width: 100vw;
+    width: 100%;
     max-width: 100vw;
     overflow: hidden;
     position: relative;
