--- a/master/src/index.scss
+++ b/master/src/index.scss
@@ -3,22 +3,15 @@
   --accent-color-rgb: 255, 77, 90;
 }
 
-// Prevent zoom and maintain fixed sizes on desktop
 html {
-  zoom: 100%;
-  -moz-transform: scale(1);
-  -moz-transform-origin: 0 0;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
-// Allow normal touch interactions on mobile
-@media (min-width: 769px) {
-  html {
-    touch-action: pan-x pan-y;
-  }
-
-  * {
-    touch-action: manipulation;
-  }
+html, body {
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @keyframes metallic-shine {
@@ -104,7 +97,9 @@ code {
 .main-container {
   position: relative;
   background-color: #0d1116;
-
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 a {
